@@ -1,0 +1,37 @@
+Subject:
+Re: xgfit...fitgsl...
+From:
+Tony Denault <denault@duke.ifa.hawaii.edu>
+Date:
+Mon, 23 Oct 2006 20:11:52 -1000 (HST)
+To:
+Ron Fox <fox@nscl.msu.edu>
+
+On Wed, 18 Oct 2006, Ron Fox wrote:
+
+> I'm interested in embedding fitgsl into a larger application that is used for data analysis in
+> the nuclear physics community.  The application nsclSpecTcl (http://www.sourceforge.net/projects/nsclspectcl)
+> is open source with a GPL license.  Naturally, any embedding would be with credit on the SpecTcl startup output.  What I would like to know is
+> - Who should I ask for permission for this embedding.
+> - If the program intellectual property is compatible with it being embedded into a work that is licensed under
+>  The GNU Public License.
+>
+
+I can grant you permission to embedded the xgfit code (fitgsl.c fitgsl.h)
+in your application, nsclSpecTcl. Credit can be given to Leilehua Maly and Tony Denault, and the NASA IRTF Telescope.
+
+>
+> The chip. The British contribution to world cuisine.
+>
+Good Stuff too!
+
+Enjoy,
+Tony Denault
+
+-- 
+/-----------------------------------------------------------------------\
+| Tony Denault                     | Email: denault@irtf.ifa.hawaii.edu |
+| Institute for Astronomy          |              Phone: (808) 932-2378 |
+| 640 North Aohoku Place           |                Fax: (808) 933-0737 |
+| Hilo, Hawaii 96720-2700          |                                    |
+\-----------------------------------------------------------------------/
