@@ -661,7 +661,8 @@ int CTclGrammerApp::operator()() {
   cerr << "                  Marty Backe, Michael McLennan, Chad Smith, and Brent B. Welch\n";
   cerr << "    - Tcl/Tk originally by John K. Ousterhout embellished and extended by the Tcl Core Team\n";
   cerr << "    - Daniel Bazin for the concept of TreeParameter and its original GUI\n";
-  cerr << "    - Leilehau Maly for gaussian fit harnesses to the gsl.\n";
+  cerr << "    - Leilehau Maly and Tony Denault of the NASA IRTF Telescope\n";
+  cerr << "      for the  gaussian fit harnesses to the gsl: fitgsl.{c,h}\n";
   cerr << " If your name should be on this list and is not, my apologies, please contact\n";
   cerr << "   fox@nscl.msu.edu and let me know what your contribution was and I will add you to\n";
   cerr << "   the list of credits.\n";
